examples/test/testpolicy8539.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8539
  namespace: namespace74
spec:
  podSelector:
    matchLabels:
      key7: value46
      key30: value4
      key20: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value26
          key3: value17
          key13: value9
      podSelector:
        matchLabels:
          key12: value26
          key10: value34
